tests/bad_programs/semantic_errors/void_return.notc
void fun() {
    return 453;
}

int main() {
    fun();
    return 0;
}
